// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-select Clear selection 1`] = `
<div>
  <div
    class="m-base-select"
  >
    <div>
      <div
        class="m-select"
        style="width: 100%; max-width: 288px;"
        tabindex="0"
      >
        <div
          class="m-input-style m--is-label-up m--has-cursor-pointer m--has-label m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-select-uuid"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Fruits
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div>
                    <input
                      placeholder="Choose a fruit"
                      readonly="readonly"
                    />
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-select__arrow"
                  >
                    <!---->
                     
                    <svg
                      aria-hidden="true"
                      class="m-icon m-select__arrow__icon"
                      height="16px"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-validation-message m-select__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p>
    v-model = 
  </p>
</div>
`;

exports[`Storyshots components|m-select default 1`] = `
<div>
  <div
    class="m-base-select"
  >
    <div>
      <div
        class="m-select"
        style="width: 100%; max-width: 288px;"
        tabindex="0"
      >
        <div
          class="m-input-style m--has-cursor-pointer m--has-value m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <span
                class="m-input-style__label"
                style="z-index: -1;"
              >
                <span
                  class="m-input-style__text"
                />
              </span>
               
              <div
                class="m-input-style__input"
              >
                <div
                  class="m-input-style__prefix"
                />
                 
                <div
                  class="m-input-style__content"
                >
                  <div>
                    The selection is :avocados
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-select__arrow"
                  >
                    <!---->
                     
                    <svg
                      aria-hidden="true"
                      class="m-icon m-select__arrow__icon"
                      height="16px"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-validation-message m-select__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p>
    v-model = avocados
  </p>
</div>
`;

exports[`Storyshots components|m-select/mobile iphone6 1`] = `
<div>
  <div
    class="m-base-select"
  >
    <div>
      <div
        class="m-select"
        style="width: 100%; max-width: 288px;"
        tabindex="0"
      >
        <div
          class="m-input-style m--has-cursor-pointer m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <span
                class="m-input-style__label"
                style="z-index: -1;"
              >
                <span
                  class="m-input-style__text"
                />
              </span>
               
              <div
                class="m-input-style__input"
              >
                <div
                  class="m-input-style__prefix"
                />
                 
                <div
                  class="m-input-style__content"
                >
                  <div>
                    The selection is :
                  </div>
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-select__arrow"
                  >
                    <!---->
                     
                    <svg
                      aria-hidden="true"
                      class="m-icon m-select__arrow__icon"
                      height="16px"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-validation-message m-select__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <p>
    v-model = 
  </p>
</div>
`;
